# voting

./: .gitignore  Makefile.am  autogen.sh  configure.in
include/: add-header.xsl  evilsedhack
vote/: Makefile.am  blt.wml  index.wml  overview-mc.wml  overview.wml  results.wml  robots.txt  vote.wml  votes.wml
vote/2005/: candidates.wml
vote/2007/: candidates.wml
vote/2011/: candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2012-confpoll/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2012-mc/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2013-board/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2013-confpoll/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2014-mc/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  timeline.ics  votes.blt  voting-instructions.txt
vote/2015-board/: Makefile.am  candidates.wml  index.wml  mkical.py  rules.wml  shuffle.js  timeline.ics  votes.blt  voting-instructions.txt
vote/include/: .gitignore  election-sql.php  schema.sql  step2-choose.php  step3-confirm.php  step4-commit.php
