SUBDIRS = include 2011 2012-confpoll 2012-mc 2013-confpoll 2013-board 2014-mc

urlpath = /vote
 
page_SCRIPTS = \
        index.html	\
        index.php	\
        results.php	\
        votes.php	\
	vote.php	\
	overview.html	\
	overview-mc.html\
	blt.php

page_DATA = \
	vote.css

include $(top_srcdir)/rules.common
